tests/compile-fail/04-uninitialized-simple-let.stderr
error: let bindings must be initialized
 --> tests/compile-fail/04-uninitialized-simple-let.rs:6:5
  |
6 |     let y;
  |     ^^^^^^
